trying to debug the deployment

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -79,3 +79,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
+      - name: Print deployment URL
+        run: echo "Deployment URL: ${{ steps.deployment.outputs.page_url }}"
