of course, that didn't work, because I used copilot, so now we're trying to fix it... *sigh*

--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -81,4 +81,9 @@ jobs:
         uses: actions/deploy-pages@v2
 
       - name: Print deployment URL
-        run: echo "Deployment URL: ${{ steps.deployment.outputs.page_url }}"
+        env:
+          DEPLOYMENT_URL: ${{ steps.deployment.outputs.page_url }}
+        run: echo "Deployment URL: $DEPLOYMENT_URL"
+:w
+
+
