--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -83,6 +83,6 @@ jobs:
       - name: Print deployment URL
         env:
           DEPLOYMENT_URL: ${{ steps.deployment.outputs.page_url }}
-        run: echo "Deployment URL: $DEPLOYMENT_URL"
-
+        run: |
+          echo "Deployment URL: $DEPLOYMENT_URL"
 
